--- a/D_Struct/data.ipynb
+++ b/D_Struct/data.ipynb
@@ -221,10 +221,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'name': 'Token A', 'symbol': 'TKA', 'blockchain': 'Ethereum', 'current_price_usd': 100.0, 'transaction_history': [{'date': '2024-01-10', 'prices': {'open': 98.0, 'close': 100.0, 'high': 101.0, 'low': 97.0}, 'volume': 12000}, {'date': '2024-01-09', 'prices': {'open': 97.0, 'close': 98.0, 'high': 99.0, 'low': 96.0}, 'volume': 15000}], 'supported_chains': ['Ethereum', 'Polygon']}\n",
-      "{'name': 'Token B', 'symbol': 'TKB', 'blockchain': 'Binance Smart Chain', 'current_price_usd': 200.0, 'transaction_history': [{'date': '2024-01-10', 'prices': {'open': 198.0, 'close': 200.0, 'high': 202.0, 'low': 196.0}, 'volume': 18000}, {'date': '2024-01-09', 'prices': {'open': 196.0, 'close': 198.0, 'high': 199.0, 'low': 195.0}, 'volume': 17000}], 'supported_chains': ['Binance Smart Chain', 'Avalanche']}\n",
-      "{'name': 'Token C', 'symbol': 'TKC', 'blockchain': 'Solana', 'current_price_usd': 310.0, 'transaction_history': [{'date': '2024-01-10', 'prices': {'open': 295.0, 'close': 300.0, 'high': 302.0, 'low': 294.0}, 'volume': 22000}, {'date': '2024-01-09', 'prices': {'open': 294.0, 'close': 295.0, 'high': 296.0, 'low': 293.0}, 'volume': 21000}], 'supported_chains': ['Solana', 'Fantom']}\n",
-      "{'name': 'Token D', 'symbol': 'TKD', 'blockchain': 'Cardano', 'current_price_usd': 50.0, 'transaction_history': [{'date': '2024-01-10', 'prices': {'open': 48.0, 'close': 50.0, 'high': 52.0, 'low': 47.0}, 'volume': 8000}, {'date': '2024-01-09', 'prices': {'open': 47.0, 'close': 48.0, 'high': 49.0, 'low': 46.0}, 'volume': 9500}], 'supported_chains': ['Cardano', 'Ethereum']}\n"
+      "310.0\n"
      ]
     }
    ],
@@ -232,8 +229,7 @@
     "#  Update the current price of \"Token C\" to 310.0.\n",
     "crypto_tokens[2].update({'current_price_usd': 310.0})\n",
     "\n",
-    "for token in crypto_tokens:\n",
-    "    print(token)"
+    "print(crypto_tokens [2]['current_price_usd'])"
    ]
   },
   {
@@ -246,10 +242,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'name': 'Token A', 'symbol': 'TKA', 'blockchain': 'Ethereum', 'current_price_usd': 100.0, 'transaction_history': [{'date': '2024-01-10', 'prices': {'open': 98.0, 'close': 100.0, 'high': 101.0, 'low': 97.0}, 'volume': 12000}], 'supported_chains': ['Ethereum', 'Polygon']}\n",
-      "{'name': 'Token B', 'symbol': 'TKB', 'blockchain': 'Binance Smart Chain', 'current_price_usd': 200.0, 'transaction_history': [{'date': '2024-01-10', 'prices': {'open': 198.0, 'close': 200.0, 'high': 202.0, 'low': 196.0}, 'volume': 18000}, {'date': '2024-01-09', 'prices': {'open': 196.0, 'close': 198.0, 'high': 199.0, 'low': 195.0}, 'volume': 17000}], 'supported_chains': ['Binance Smart Chain', 'Avalanche']}\n",
-      "{'name': 'Token C', 'symbol': 'TKC', 'blockchain': 'Solana', 'current_price_usd': 310.0, 'transaction_history': [{'date': '2024-01-10', 'prices': {'open': 295.0, 'close': 300.0, 'high': 302.0, 'low': 294.0}, 'volume': 22000}, {'date': '2024-01-09', 'prices': {'open': 294.0, 'close': 295.0, 'high': 296.0, 'low': 293.0}, 'volume': 21000}], 'supported_chains': ['Solana', 'Fantom']}\n",
-      "{'name': 'Token D', 'symbol': 'TKD', 'blockchain': 'Cardano', 'current_price_usd': 50.0, 'transaction_history': [{'date': '2024-01-10', 'prices': {'open': 48.0, 'close': 50.0, 'high': 52.0, 'low': 47.0}, 'volume': 8000}, {'date': '2024-01-09', 'prices': {'open': 47.0, 'close': 48.0, 'high': 49.0, 'low': 46.0}, 'volume': 9500}], 'supported_chains': ['Cardano', 'Ethereum']}\n"
+      "[{'date': '2024-01-10', 'prices': {'open': 98.0, 'close': 100.0, 'high': 101.0, 'low': 97.0}, 'volume': 12000}]\n"
      ]
     }
    ],
@@ -257,8 +250,7 @@
     "# Remove the transaction history for \"Token A\" on \"2024-01-09\".\n",
     "crypto_tokens[0]['transaction_history'].pop(1)\n",
     "\n",
-    "for token in crypto_tokens:\n",
-    "    print(token)"
+    "print(crypto_tokens[0]['transaction_history'])"
    ]
   },
   {
@@ -268,19 +260,18 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "200.0"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "200.0\n"
+     ]
     }
    ],
    "source": [
     "# Display the closing price of \"Token B\" on \"2024-01-10\".\n",
-    "crypto_tokens[1]['transaction_history'][0]['prices']['close']\n"
+    "crypto_tokens[1]['transaction_history'][0]['prices']['close']\n",
+    "\n",
+    "print(crypto_tokens[1]['transaction_history'][0]['prices']['close'])"
    ]
   },
   {
@@ -290,22 +281,21 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'name': 'Token A', 'symbol': 'TKA', 'blockchain': 'Ethereum', 'current_price_usd': 100.0, 'transaction_history': [{'date': '2024-01-10', 'prices': {'open': 99.0, 'close': 100.0, 'high': 101.0, 'low': 97.0}, 'volume': 12000}], 'supported_chains': ['Ethereum', 'Polygon']}\n",
-      "{'name': 'Token B', 'symbol': 'TKB', 'blockchain': 'Binance Smart Chain', 'current_price_usd': 200.0, 'transaction_history': [{'date': '2024-01-10', 'prices': {'open': 198.0, 'close': 200.0, 'high': 202.0, 'low': 196.0}, 'volume': 18000}, {'date': '2024-01-09', 'prices': {'open': 196.0, 'close': 198.0, 'high': 199.0, 'low': 195.0}, 'volume': 17000}], 'supported_chains': ['Binance Smart Chain', 'Avalanche']}\n",
-      "{'name': 'Token C', 'symbol': 'TKC', 'blockchain': 'Solana', 'current_price_usd': 310.0, 'transaction_history': [{'date': '2024-01-10', 'prices': {'open': 295.0, 'close': 300.0, 'high': 302.0, 'low': 294.0}, 'volume': 22000}, {'date': '2024-01-09', 'prices': {'open': 294.0, 'close': 295.0, 'high': 296.0, 'low': 293.0}, 'volume': 21000}], 'supported_chains': ['Solana', 'Fantom']}\n",
-      "{'name': 'Token D', 'symbol': 'TKD', 'blockchain': 'Cardano', 'current_price_usd': 50.0, 'transaction_history': [{'date': '2024-01-10', 'prices': {'open': 48.0, 'close': 50.0, 'high': 52.0, 'low': 47.0}, 'volume': 8000}, {'date': '2024-01-09', 'prices': {'open': 47.0, 'close': 48.0, 'high': 49.0, 'low': 46.0}, 'volume': 9500}], 'supported_chains': ['Cardano', 'Ethereum']}\n"
-     ]
+     "data": {
+      "text/plain": [
+       "99.0"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# Change the opening price of \"Token A\" on \"2024-01-10\" to 99.0.\n",
     "crypto_tokens[0][\"transaction_history\"][0][\"prices\"].update({\"open\": 99.0})\n",
     "\n",
-    "for token in crypto_tokens:\n",
-    "    print(token)"
+    "crypto_tokens[0]['transaction_history'][0]['prices']['open']"
    ]
   },
   {
@@ -315,14 +305,16 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'name': 'Token A', 'symbol': 'TKA', 'blockchain': 'Ethereum', 'current_price_usd': 100.0, 'transaction_history': [{'date': '2024-01-10', 'prices': {'open': 99.0, 'close': 100.0, 'high': 101.0, 'low': 97.0}, 'volume': 12000}], 'supported_chains': ['Ethereum', 'Polygon']}\n",
-      "{'name': 'Token B', 'symbol': 'TKB', 'blockchain': 'Binance Smart Chain', 'current_price_usd': 200.0, 'transaction_history': [{'date': '2024-01-10', 'prices': {'open': 198.0, 'close': 200.0, 'high': 202.0, 'low': 196.0}, 'volume': 18000}, {'date': '2024-01-09', 'prices': {'open': 196.0, 'close': 198.0, 'high': 199.0, 'low': 195.0}, 'volume': 17000}], 'supported_chains': ['Binance Smart Chain', 'Avalanche']}\n",
-      "{'name': 'Token C', 'symbol': 'TKC', 'blockchain': 'Solana', 'current_price_usd': 310.0, 'transaction_history': [{'date': '2024-01-10', 'prices': {'open': 295.0, 'close': 300.0, 'high': 302.0, 'low': 294.0}, 'volume': 22000}, {'date': '2024-01-09', 'prices': {'open': 294.0, 'close': 295.0, 'high': 296.0, 'low': 293.0}, 'volume': 21000}, {'date': '2024-01-11', 'prices': {'open': 300.0, 'close': 305.0, 'high': 307.0, 'low': 299.0}, 'volume': 23000}], 'supported_chains': ['Solana', 'Fantom']}\n",
-      "{'name': 'Token D', 'symbol': 'TKD', 'blockchain': 'Cardano', 'current_price_usd': 50.0, 'transaction_history': [{'date': '2024-01-10', 'prices': {'open': 48.0, 'close': 50.0, 'high': 52.0, 'low': 47.0}, 'volume': 8000}, {'date': '2024-01-09', 'prices': {'open': 47.0, 'close': 48.0, 'high': 49.0, 'low': 46.0}, 'volume': 9500}], 'supported_chains': ['Cardano', 'Ethereum']}\n"
-     ]
+     "data": {
+      "text/plain": [
+       "{'date': '2024-01-11',\n",
+       " 'prices': {'open': 300.0, 'close': 305.0, 'high': 307.0, 'low': 299.0},\n",
+       " 'volume': 23000}"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -338,8 +330,7 @@
     "    \"volume\": 23000\n",
     "})\n",
     "\n",
-    "for token in crypto_tokens:\n",
-    "    print(token)\n"
+    "crypto_tokens[2]['transaction_history'][2]"
    ]
   },
   {
@@ -352,10 +343,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'name': 'Token A', 'symbol': 'TKA', 'blockchain': 'Ethereum', 'current_price_usd': 100.0, 'transaction_history': [{'date': '2024-01-10', 'prices': {'open': 99.0, 'close': 100.0, 'high': 101.0, 'low': 97.0}, 'volume': 12000}], 'supported_chains': ['Ethereum', 'Polygon']}\n",
-      "{'name': 'Token B', 'symbol': 'TKB', 'blockchain': 'Binance Smart Chain', 'current_price_usd': 200.0, 'transaction_history': [{'date': '2024-01-10', 'prices': {'open': 198.0, 'close': 200.0, 'high': 202.0, 'low': 196.0}, 'volume': 18000}, {'date': '2024-01-09', 'prices': {'open': 196.0, 'close': 198.0, 'high': 199.0, 'low': 195.0}, 'volume': 17000}], 'supported_chains': ['Binance Smart Chain']}\n",
-      "{'name': 'Token C', 'symbol': 'TKC', 'blockchain': 'Solana', 'current_price_usd': 310.0, 'transaction_history': [{'date': '2024-01-10', 'prices': {'open': 295.0, 'close': 300.0, 'high': 302.0, 'low': 294.0}, 'volume': 22000}, {'date': '2024-01-09', 'prices': {'open': 294.0, 'close': 295.0, 'high': 296.0, 'low': 293.0}, 'volume': 21000}, {'date': '2024-01-11', 'prices': {'open': 300.0, 'close': 305.0, 'high': 307.0, 'low': 299.0}, 'volume': 23000}], 'supported_chains': ['Solana', 'Fantom']}\n",
-      "{'name': 'Token D', 'symbol': 'TKD', 'blockchain': 'Cardano', 'current_price_usd': 50.0, 'transaction_history': [{'date': '2024-01-10', 'prices': {'open': 48.0, 'close': 50.0, 'high': 52.0, 'low': 47.0}, 'volume': 8000}, {'date': '2024-01-09', 'prices': {'open': 47.0, 'close': 48.0, 'high': 49.0, 'low': 46.0}, 'volume': 9500}], 'supported_chains': ['Cardano', 'Ethereum']}\n"
+      "['Binance Smart Chain']\n"
      ]
     }
    ],
@@ -363,8 +351,8 @@
     "#  Remove \"Avalanche\" from the supported chains of \"Token B\".\n",
     "crypto_tokens[1]['supported_chains'].remove('Avalanche')\n",
     "\n",
-    "for token in crypto_tokens:\n",
-    "    print(token)"
+    "\n",
+    "print(crypto_tokens[1]['supported_chains'])"
    ]
   },
   {
