--- a/D_Struct/web3.ipynb
+++ b/D_Struct/web3.ipynb
@@ -1375,21 +1375,83 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total Gas Used per Token:\n",
-      "  token  gas_used\n",
-      "0   DAI  11918034\n",
-      "1   ETH  12163737\n",
-      "2   UNI  12054799\n",
-      "3  USDC  11967216\n",
-      "4  WBTC  12930658\n"
+      "Total Gas Used per Token:\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>token</th>\n",
+       "      <th>gas_used</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>DAI</td>\n",
+       "      <td>11918034</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>ETH</td>\n",
+       "      <td>12163737</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>UNI</td>\n",
+       "      <td>12054799</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>USDC</td>\n",
+       "      <td>11967216</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>WBTC</td>\n",
+       "      <td>12930658</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  token  gas_used\n",
+       "0   DAI  11918034\n",
+       "1   ETH  12163737\n",
+       "2   UNI  12054799\n",
+       "3  USDC  11967216\n",
+       "4  WBTC  12930658"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# Total gas used per token\n",
     "total_gas_per_token = df.groupby('token')['gas_used'].sum().reset_index()\n",
     "print(\"Total Gas Used per Token:\")\n",
-    "print(total_gas_per_token)"
+    "total_gas_per_token"
    ]
   },
   {
@@ -1762,7 +1824,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Sample Binary Flag for Large Transactions:\n",
+      "Sample Flag for Large Transactions:\n",
       "    amount  is_large_tx\n",
       "0   234.63            0\n",
       "1  1505.06            1\n",
@@ -1865,7 +1927,7 @@
    "source": [
     "# Create binary feature with np.where(): is_large_tx\n",
     "df['is_large_tx'] = np.where(df['amount'] > 1000, 1, 0)\n",
-    "print(\"\\nSample Binary Flag for Large Transactions:\")\n",
+    "print(\"\\nSample Flag for Large Transactions:\")\n",
     "print(df[['amount', 'is_large_tx']].head())\n",
     "\n",
     "# Summary by token\n",
@@ -2099,122 +2161,6 @@
    ],
    "source": [
     "df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "id": "afbe1962",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Pivot Table - Total Amount Transferred per Token per Day:\n",
-      "day    2024-07-01  2024-07-02  2024-07-03  2024-07-04  2024-07-05  2024-07-06  \\\n",
-      "token                                                                           \n",
-      "DAI        981.03     3293.77     1098.44     1429.71     2150.39     4961.15   \n",
-      "ETH       4437.94     3387.59     2179.93     2631.23     2163.15     1396.71   \n",
-      "UNI       1365.56     3226.33     1139.66     4812.17     3343.93     2662.74   \n",
-      "USDC      3315.54     4156.94     2153.10     5980.24     4019.92     3759.70   \n",
-      "WBTC      1786.15     2495.53     1998.47     3341.75     2036.14     3661.97   \n",
-      "\n",
-      "day    2024-07-07  2024-07-08  2024-07-09  2024-07-10  ...  2024-07-21  \\\n",
-      "token                                                  ...               \n",
-      "DAI       1459.46     2778.56     5690.08     2873.41  ...     4683.88   \n",
-      "ETH       5213.51     7382.79     1054.12     4103.09  ...     1324.07   \n",
-      "UNI       2526.87     4525.55     2530.37      240.37  ...     1186.67   \n",
-      "USDC      4501.74     1489.73     2647.31     3573.40  ...     5045.03   \n",
-      "WBTC      3547.89     4055.82     3585.88      935.94  ...     7192.64   \n",
-      "\n",
-      "day    2024-07-22  2024-07-23  2024-07-24  2024-07-25  2024-07-26  2024-07-27  \\\n",
-      "token                                                                           \n",
-      "DAI       5082.96     1274.72     5799.61     2187.39     2362.51     3811.85   \n",
-      "ETH       2011.65     1013.46     4403.55     3904.14     1632.84     2521.84   \n",
-      "UNI       4703.19     2651.29     3757.96     4080.85     4372.96     4908.37   \n",
-      "USDC      3625.93     5466.10     3349.96     2314.46     1959.97     4458.44   \n",
-      "WBTC      6496.35     6356.13     4042.02     4023.45      712.79     3548.41   \n",
-      "\n",
-      "day    2024-07-28  2024-07-29  2024-07-30  \n",
-      "token                                      \n",
-      "DAI       5424.34     2521.41     3661.26  \n",
-      "ETH       4941.49     1868.99     3092.18  \n",
-      "UNI       4156.40     2501.23     4340.96  \n",
-      "USDC      3199.36      978.38     2464.37  \n",
-      "WBTC      5095.99     6346.91     5295.82  \n",
-      "\n",
-      "[5 rows x 30 columns]\n",
-      "\n",
-      "Transaction Tags Distribution:\n",
-      "tx_tag\n",
-      "medium    653\n",
-      "low       205\n",
-      "high      142\n",
-      "Name: count, dtype: int64\n",
-      "\n",
-      "Large Transaction Analysis:\n",
-      "Total transactions: 1,000\n",
-      "Large transactions (>1000): 142\n",
-      "Percentage large: 14.2%\n",
-      "\n",
-      "Sample Results:\n",
-      "  token   amount  tx_tag  is_large_tx\n",
-      "0   UNI   234.63  medium            0\n",
-      "1  USDC  1505.06    high            1\n",
-      "2  WBTC   658.37  medium            0\n",
-      "3   UNI   456.47  medium            0\n",
-      "4  WBTC    84.81     low            0\n",
-      "5  WBTC    84.80     low            0\n",
-      "6   UNI    29.92     low            0\n",
-      "7   ETH  1005.62    high            1\n",
-      "8   ETH   459.54  medium            0\n",
-      "9   UNI   615.63  medium            0\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Convert timestamp to datetime and extract day\n",
-    "df['timestamp'] = pd.to_datetime(df['timestamp'])\n",
-    "df['day'] = df['timestamp'].dt.date\n",
-    "\n",
-    "# 1. Create pivot table: Rows = Token, Columns = Day, Values = Total amount transferred\n",
-    "pivot_table = df.pivot_table(\n",
-    "    index='token',\n",
-    "    columns='day', \n",
-    "    values='amount',\n",
-    "    aggfunc='sum',\n",
-    "    fill_value=0\n",
-    ")\n",
-    "\n",
-    "print(\"Pivot Table - Total Amount Transferred per Token per Day:\")\n",
-    "print(pivot_table)\n",
-    "\n",
-    "# 2. Use apply() to tag transactions\n",
-    "def tag_transaction(amount):\n",
-    "    if amount < 100:\n",
-    "        return 'low'\n",
-    "    elif amount <= 1000:\n",
-    "        return 'medium'\n",
-    "    else:\n",
-    "        return 'high'\n",
-    "\n",
-    "df['tx_tag'] = df['amount'].apply(tag_transaction)\n",
-    "\n",
-    "print(f\"\\nTransaction Tags Distribution:\")\n",
-    "print(df['tx_tag'].value_counts())\n",
-    "\n",
-    "# 3. Use np.where() to create binary feature\n",
-    "df['is_large_tx'] = np.where(df['amount'] > 1000, 1, 0)\n",
-    "\n",
-    "print(f\"\\nLarge Transaction Analysis:\")\n",
-    "print(f\"Total transactions: {len(df):,}\")\n",
-    "print(f\"Large transactions (>1000): {df['is_large_tx'].sum():,}\")\n",
-    "print(f\"Percentage large: {(df['is_large_tx'].mean() * 100):.1f}%\")\n",
-    "\n",
-    "# Sample of results\n",
-    "print(f\"\\nSample Results:\")\n",
-    "print(df[['token', 'amount', 'tx_tag', 'is_large_tx']].head(10))"
    ]
   },
   {
