--- a/D_Struct/comp_stitch/api_check.ipynb
+++ b/D_Struct/comp_stitch/api_check.ipynb
@@ -128,9 +128,9 @@
     "\n",
     "2. Write\n",
     "\n",
-    "    - <span style=\"color:red; background-color: lightgrey\">ETHERSCAN API KEY-yourApikey</span>\n",
+    "    - <span style=\"color:red; background-color: lightgrey\">ETHERSCAN API KEY=yourApikey</span>\n",
     "\n",
-    "    - <span style=\"color:red; background-color: lightgrey\">COINGECKO APT KEY yourApiKey</span>"
+    "    - <span style=\"color:red; background-color: lightgrey\">COINGECKO APT KEY=yourApiKey</span>"
    ]
   },
   {
