--- a/D_Struct/comp_stitch/api_check.ipynb
+++ b/D_Struct/comp_stitch/api_check.ipynb
@@ -41,6 +41,8 @@
     "    - Path Paramter Part of the URL path itself, used to identify a specific resource <span style=\"color:red; background-color: lightgrey\">/coins/(coin)/history</span>\n",
     "\n",
     "    - Query Paramter: Added to the end of the URL, after a ?, and used to filter or modify the data you get back <span style=\"color:red; background-color: lightgrey\">?date 30-12-2024</span>\n",
+    "    \n",
+    "    <span style=\"color:red; background-color: lightgrey\">/coins/(coin)/history?date 30-12-2024</span>\n",
     "\n",
     "- API Header: Refers to metadata sent along with the HTTP request or response (sometimes used for authentication)\n",
     "\n",
@@ -128,9 +130,9 @@
     "\n",
     "2. Write\n",
     "\n",
-    "    - <span style=\"color:red; background-color: lightgrey\">ETHERSCAN API KEY=yourApikey</span>\n",
+    "    - <span style=\"color:red; background-color: lightgrey\">ETHERSCAN_API_KEY=yourApikey</span>\n",
     "\n",
-    "    - <span style=\"color:red; background-color: lightgrey\">COINGECKO APT KEY=yourApiKey</span>"
+    "    - <span style=\"color:red; background-color: lightgrey\">COINGECKO_API_KEY=yourApiKey</span>"
    ]
   },
   {
@@ -287,7 +289,7 @@
     "# We are able to parse the balance from the JSON response similar to how we would parse a dictionary in Python\n",
     "\n",
     "balance_wei = int(data['result']) # Extracting the balance in Wei from the response\n",
-    "balance_ether = balance_wei / 10**18 # Converting Wei to Ether\n",
+    "balance_ether = balance_wei / 10**18 # Converting Wei to Ether (1 Quantillion Wei = 1 ETH)\n",
     "print(f'Balance in Ether: {balance_ether}') # Displaying the balance in Ether"
    ]
   },
@@ -319,7 +321,10 @@
     "data = r.json() # Parsing the JSON response\n",
     "\n",
     "# Display the data\n",
-    "print(f'API Response:\\n{json.dumps(data, indent=4)}') # Pretty print the JSON data with an indentation of 4 spaces"
+    "print(f'API Response:\\n{json.dumps(data, indent=4)}') # Pretty print the JSON data with an indentation of 4 spaces\n",
+    "\n",
+    "# Status 1 means the tx was successful \n",
+    "# Status 0 means the tx failed"
    ]
   },
   {
@@ -379,6 +384,16 @@
     "transactions = data['result'] # Extracting the transactions from the response\n",
     "df = pd.DataFrame(transactions) # Converting the transactions to a pandas DataFrame\n",
     "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ff8f98ea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.info() # reference datetime with relation to data exploration and data cleaning"
    ]
   },
   {
@@ -476,9 +491,9 @@
     "    'topic0':'0xddf252ad1be2c89b69c2b068fc378daa952ba7f163c4a11628f55a4df523b3ef', # Topic for Transfer event\n",
     "    'topic_0_opr': 'and',\n",
     "    'topic1':'0x0000000000000000000000000000000000000000000000000000000000000000', # Topic for specific adderess\n",
-    "    # 'contractaddress':'0x6b175474e89094c44da98b954eedeac495271d0f', # Contract address of the token (DAI in this case)\n",
     "    'apikey':ETHERSCAN_API_KEY # API Key for Etherscan\n",
     "}\n",
+    "\n",
     "r = requests.get(etherscan_url, params=params) # Making the GET request to Etherscan API (creates instance of Response object)\n",
     "r.raise_for_status() # Raise an error for bad responses (4xx or 5xx status codes)\n",
     "data = r.json() # Parsing the JSON response"
@@ -493,6 +508,29 @@
    "source": [
     "# Display the data\n",
     "print(f'API Response:\\n{json.dumps(data, indent=4)}') # Pretty print the JSON data with an indentation of 4 spaces"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "80ee2d67",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# futher explanation\n",
+    "specific = data['result'] # Extracting the transactions from the response\n",
+    "df = pd.DataFrame(specific) # Converting the transactions to a pandas DataFrame\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dccc7790",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.tail()"
    ]
   },
   {
@@ -543,7 +581,7 @@
    "source": [
     "# Convert the balance from Wei to Ether\n",
     "balance_wei = int(data['result']) # Extracting the balance in Wei from the response\n",
-    "balance_ether = balance_wei / 10**18 # Converting Wei to Ether\n",
+    "balance_ether = balance_wei / 10**18 # Converting Wei units to Ether units (DAI has 18 decimals)\n",
     "print(f'Total Supply: {balance_ether:,.2f} DAI') # Displaying the total supply"
    ]
   },
@@ -580,6 +618,21 @@
     "    data = r.json() # Parsing the JSON response\n",
     "except requests.exceptions.HTTPError as err:\n",
     "    print(f'HTTP error occurred: {err}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "076de484",
+   "metadata": {},
+   "source": [
+    "##### What is a Peg Stability Module\n",
+    "A Peg Stability Module is a smart contract mechanism used (and similar protocols) to:\n",
+    "\n",
+    "Keep the price of a stablecoin (like DAI) close to its intended peg (e.g., $1).\n",
+    "\n",
+    "Allow users to swap assets (e.g., USDC, USDP) for DAI at near 1:1 rates.\n",
+    "\n",
+    "Absorb excess demand/supply pressure that might make DAI deviate from $1."
    ]
   },
   {
@@ -622,7 +675,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Gas Oracle Prices (For Priority Fees)\n",
+    "# Gas Oracle Prices (For Priority Fees) How much is the current gas fee on eth atm\n",
     "# The gas prices are returned in Gwei\n",
     "\n",
     "params = {\n",
@@ -665,7 +718,7 @@
    "source": [
     "headers = {\n",
     "    \"accept\": \"application/json\",\n",
-    "    \"x-cg-demo-api-key\": COINGECKO_API_KEY  # Using the API key for authentication\n",
+    "    \"x-cg-demo-api-key\": COINGECKO_API_KEY  # Using the API key for authentication (Some APIs wouldnt respond unless you set the right headers)\n",
     "}"
    ]
   },
@@ -712,6 +765,18 @@
     "r.raise_for_status()\n",
     "data = r.json() # Parsing the JSON response\n",
     "print(f'API Response:\\n{json.dumps(data, indent=4)}') # Pretty print the JSON data with an indentation of 4 spaces"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bd5db4ad",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "coin_list = data # Extracting the transactions from the response\n",
+    "df = pd.DataFrame(coin_list) # Converting the transactions to a pandas DataFrame\n",
+    "df.head()"
    ]
   },
   {
@@ -797,6 +862,18 @@
     "data = r.json() # Parsing the JSON response\n",
     "# Display the data\n",
     "print(f'API Response:\\n{json.dumps(data, indent=4)}') # Pretty"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8ceffbea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mcp = data # Extracting the transactions from the response\n",
+    "df = pd.DataFrame(mcp) # Converting the transactions to a pandas DataFrame\n",
+    "df.head(10)"
    ]
   },
   {
@@ -983,6 +1060,19 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a328f864",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "type(data['tickers'])\n",
+    "\n",
+    "for ticker in data['tickers']:\n",
+    "    print(f\"Exchange: {ticker['market']['name']}, Pair: {ticker['base']} / {ticker['target']}, Price: {ticker['last']}, Volume: {ticker['volume']}\") # Displaying the exchange, pair, price, and volume for each ticker"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "222ccad0",
    "metadata": {},
@@ -1097,14 +1187,14 @@
     "coin = 'bitcoin' # Passed as path parameter\n",
     "params = {\n",
     "    'vs_currency': 'usd',\n",
-    "    'from': int(pd.Timestamp('2025-01-01').timestamp()), # Start date in Unix timestamp format\n",
+    "    'from': int(pd.Timestamp('2025-01-01').timestamp()), # Start date in Unix timestamp format - for computers to understand\n",
     "    'to': int(pd.Timestamp('2025-07-25').timestamp()) # End date in Unix timestamp format\n",
     "}\n",
     "\n",
     "r = requests.get(coingecko_url + f'/coins/{coin}/market_chart/range', params=params, headers=headers)\n",
     "r.raise_for_status() # Raise an error for bad responses (4xx or 5xx status codes)\n",
     "data = r.json() # Parsing the JSON response \n",
-    "#\n",
+    "\n",
     "print(f'API Response:\\n{json.dumps(data, indent=4)}') # Pretty print the JSON data with an indentation of 4 spaces"
    ]
   },
