--- a/D_Struct/comp_stitch/sql.ipynb
+++ b/D_Struct/comp_stitch/sql.ipynb
@@ -345,6 +345,10 @@
    "metadata": {},
    "source": [
     "### Joins & Relationships\n",
+    "\n",
+    "#### Understanding Table Relationships\n",
+    "\n",
+    "In real databased data is often split across multiple related tables. For Example.\n",
     "\n"
    ]
   },
@@ -406,7 +410,12 @@
    "id": "fb9da31d",
    "metadata": {},
    "source": [
-    "### Performing Joins\n"
+    "### Performing Joins\n",
+    "\n",
+    "- Inner join - keeps only rows that match in both tables\n",
+    "- Left Join - **Keeps all rows from the left table**, and matches from the right table if available.\n",
+    "- Right Join - **Keeps all rows from the right table**, matches from the left if available.\n",
+    "- Full Outer Join - **Keeps all rows from both tables**, matching where possible."
    ]
   },
   {
@@ -584,7 +593,9 @@
    "cell_type": "markdown",
    "id": "09a94ebf",
    "metadata": {},
-   "source": []
+   "source": [
+    "### Exercise"
+   ]
   },
   {
    "cell_type": "code",
@@ -611,7 +622,14 @@
    "cell_type": "markdown",
    "id": "a6b3c222",
    "metadata": {},
-   "source": []
+   "source": [
+    "- Take-Home exercise\n",
+    "    - Create a notebook which does following:\n",
+    "        - Insert at least **3 different coins** into the `coins` table.\n",
+    "        - Insert **5 daily price records** for each coin into the `prices` table.\n",
+    "        - Create a business question (what is the average price for each coin? what is the highest price for each coin?)\n",
+    "        - Write an SQL query to solve the business question"
+   ]
   },
   {
    "cell_type": "code",
